Update
- Mdlx now loads from and saves to ByteBuffers using BinaryReader/Writer, nothing more. The reasoning is that it's not the responsibility of the parser to know (or indeed care) where the bytes it got came from.
- Added FbxTree to parse FBX files. This is the first step towards an FBX importer.
- Added (temporary?) loading and saving functions in MdxUtils, so that all of the different tests/hacks/etc. use few entry points that can be changed later.
- Removed the custom collection classes and reverted to the builtin equivalents.
- Did lots of cleaning, changing type declarations like ArrayList to List where possible, deleted lots of files, etc.